welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: ')' expected but integer literal found.
	    if(!estDosMur &&  !(getX() + getY()6)){
                                               ^Diagonal:34: error: ')' expected but '}' found.
	     }
             ^